hack/benchmark/manifests/coexist.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: creator-tracking-benchmark-coexist-webhook
spec:
  background: false
  failurePolicy: Ignore
  rules:
    - name: mark-benchmark-resource
      match:
        any:
          - resources:
              kinds: [ConfigMap]
              operations: [CREATE]
      mutate:
        patchStrategicMerge:
          metadata:
            labels:
              creator-tracking-benchmark: coexist-webhook
